@@ -1,10 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.456 2005/11/04 03:40:20 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.457 2005/11/05 20:01:07 codeman Exp $
 
 *GLI-0.3 (17 Oct 2005)
 
+  5 Nov 2005; Preston Cody <codeman@gentoo.org>
+  webgli: lots of updates.  preliminary partitioning.  extra packages works.
+  
   3 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/gliserv.py:
   httpd now supports HTTPS and falls back to HTTP if not available
